Only use the negative margin visual trick in the 2+ buckets per row case where the positive margins on the buckets undo the appearance of a padding issue on narrow mobile.

--- a/lai/css/academic_commons/resources.scss
+++ b/lai/css/academic_commons/resources.scss
@@ -8,7 +8,9 @@
 .resources {
   display: flex !important;
   flex-wrap: wrap;
-  margin-right: -20px;
+  @include mediaMin(550px) {
+    margin-right: -20px;
+  }
   > div {
     width: 100%;
     @include mediaMin(550px) {
